WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100330
[BlackBerry] WebView process crashed at AuthenticationChallengeManager::pageVisibilityChanged()
https://bugs.webkit.org/show_bug.cgi?id=100330
Summary
[BlackBerry] WebView process crashed at AuthenticationChallengeManager::pageV...
Sean Wang
Reported
2012-10-24 22:44:04 PDT
DESCRIPTION: When closing current tab, tabs view process assert failed at AuthenticationChallengeManager::pageVisibilityChanged(). When web page exit, it delete it self from AuthenticationChallengeManager, and then set it self invisible. Since setting invisible depends on AuthenticationChallengeManager, so it assert failed. HOW TO REPRODUCE: Build debug of webkit repo, then open two tabs, then close the current tab. EXPECTED: The current tab is closed and returns to the tab bar. ACTUAL: Browser crashed at the following assertion failure. Thread [3] (Suspended: Signal 'SIGSEGV' received. Description: Segmentation fault.) 26 WebCore::AuthenticationChallengeManager::pageVisibilityChanged() AuthenticationChallengeManager.cpp:135 0x7e00496c 25 BlackBerry::WebKit::WebPage::setVisible() WebPage.cpp:3241 0x79111e7c 24 BlackBerry::WebKit::WebPagePrivate::~WebPagePrivate() WebPage.cpp:462 0x791059a8 23 BlackBerry::WebKit::WebPagePrivate::~WebPagePrivate() WebPage.cpp:501 0x79105e34 22 BlackBerry::Platform::deleteGuardedObject() BlackBerryPlatformGuardedPointer.cpp:290 0x78bd7ce8 21 BlackBerry::WebKit::WebPage::~WebPage() WebPage.cpp:505 0x79105ea4 20 BlackBerry::WebKit::WebPage::~WebPage() WebPage.cpp:507 0x79105f08 19 BlackBerry::Platform::deleteGuardedObject() BlackBerryPlatformGuardedPointer.cpp:290 0x78bd7ce8 18 BlackBerry::WebKit::WebPage::destroy() WebPage.cpp:3121 0x79111924
Attachments
patch
(2.81 KB, patch)
2012-10-24 23:11 PDT
,
Sean Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2012-10-24 23:11:00 PDT
Created
attachment 170556
[details]
patch
Charles Wei
Comment 2
2012-10-25 02:21:51 PDT
Comment on
attachment 170556
[details]
patch Looks good to me. Need a reviewer to approve it .
Rob Buis
Comment 3
2012-10-25 08:05:10 PDT
Comment on
attachment 170556
[details]
patch LGTM.
Charles Wei
Comment 4
2012-10-25 18:55:28 PDT
Comment on
attachment 170556
[details]
patch commit
WebKit Review Bot
Comment 5
2012-10-25 19:38:23 PDT
Comment on
attachment 170556
[details]
patch Clearing flags on attachment: 170556 Committed
r132561
: <
http://trac.webkit.org/changeset/132561
>
WebKit Review Bot
Comment 6
2012-10-25 19:38:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug