[BlackBerry] WebView process crashed at AuthenticationChallengeManager::pageVisibilityChanged() https://bugs.webkit.org/show_bug.cgi?id=100330

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2012-10-25
Reviewed by Rob Buis.

Reviewed internally by Charles Wei.
PR #231232

Since AuthenticationChallengeManager keeps a map of WebPages, WebPage setting
visible needs AuthenticationChallengeManager to update its records, deleting
webpage from AuthenticationChallengeManager's map should be done after setting
webpage visibility.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::~WebPagePrivate):

git-svn-id: svn://svn.chromium.org/blink/trunk@132561 bbb929c8-8fbe-4397-9dbb-9b2b20218538